--- a/templates/customer/edit.html.twig
+++ b/templates/customer/edit.html.twig
@@ -20,7 +20,6 @@
         		<th> Vorname </th>
         		<th> Nachnahme </th>
         		<th> Kundennummer </th>
-        		<th> Geschlecht </th>
     		</tr>
 		</thead>
 		<tbody>
@@ -29,7 +28,6 @@
         		<td> {{ form_row(form.name) }} </td>
         		<td> {{ form_row(form.prename) }} </td>
         		<td> {{ form_row(form.customerNumber) }} </td>
-        		<td> {{ form_row(form.gender) }} </td>
     		</tr>
 		</tbody>
 		<thead>
@@ -45,7 +43,7 @@
     		<tr>
         		<td> {{ form_row(form.street) }} </td>
         		<td> {{ form_row(form.number) }} </td>
-        		<td> {{ form_row(form.postalCode) }} </td>
+        		<td> {{ form_row(form.postalcode) }} </td>
         		<td> {{ form_row(form.city) }} </td>
         		<td> {{ form_row(form.country) }} </td>
     		</tr>
