--- a/templates/customer/index.html.twig
+++ b/templates/customer/index.html.twig
@@ -1,5 +1,8 @@
 {% extends 'base.html.twig' %}
-
+{% block stylesheets %}
+     {{ parent() }}
+     {{ encore_entry_link_tags('customer_list') }}
+{% endblock %}
 {% block title %}Hello Customer!{% endblock %}
 
 {% block sideMenu %}
@@ -17,15 +20,12 @@
 {% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
 <div class="example-wrapper">
     <h1>Hello Customer Form! ✅</h1>
     Customer:
-    
+    {{ knp_menu_render('main') }}
+    {{ knp_menu_render('sidebar') }}
 <table>
     <thead>
     		<tr>
@@ -57,9 +57,12 @@
             		<i class="fa fa-trash"></i>
             		Customer bearbeiten
         		</a></td>	
+        		<td><a href="{{ path('edit_customer', { id : item.id }) }}" class="list-group-item small delete">
+            		<i class="fa fa-trash"></i>
+            		Customer loeschen
+        		</a></td>	
             </tr>
         {% endfor %}
     </tbody>
 </table>
-            
 {% endblock %}
