--- a/templates/customer/index.html.twig
+++ b/templates/customer/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block stylesheets %}
      {{ parent() }}
-     {{ encore_entry_link_tags('customer_list') }}
+     {{ encore_entry_link_tags('customerList') }}
 {% endblock %}
 {% block title %}Hello Customer!{% endblock %}
 
