--- a/templates/customer/index.html.twig
+++ b/templates/customer/index.html.twig
@@ -20,12 +20,15 @@
 {% endblock %}
 
 {% block body %}
+{% block menu %}
 
+	{% include ('menu/menu.html.twig') %}
+
+{% endblock %}
 <div class="example-wrapper">
     <h1>Hello Customer Form! ✅</h1>
     Customer:
-    {{ knp_menu_render('main') }}
-    {{ knp_menu_render('sidebar') }}
+   
 <table>
     <thead>
     		<tr>
@@ -65,4 +68,5 @@
         {% endfor %}
     </tbody>
 </table>
+
 {% endblock %}
