--- a/templates/customer/edit.html.twig
+++ b/templates/customer/edit.html.twig
@@ -3,11 +3,12 @@
 {% block title %}New Customer!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
+{% block menu %}
+
+	{% include ('menu/menu.html.twig') %}
+
+{% endblock %}
 <div class="example-wrapper">
     <h1>New Customer Form! ✅</h1>
 	
