--- a/templates/customer/new.html.twig
+++ b/templates/customer/new.html.twig
@@ -3,53 +3,50 @@
 {% block title %}Edit Customer!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
+{% block menu %}
+
+	{% include ('menu/menu.html.twig') %}
+
+{% endblock %}
 <div class="example-wrapper">
     <h1>Hello Customer Form! ✅</h1>
-    {{ knp_menu_render('main') }}
-    {{ knp_menu_render('sidebar') }}
-    Customer:
-    {{ form_start(form) }}
-    <table>
-    	<thead>
-    		<tr>
-        		<th> Anrede </th>
-        		<th> Vorname </th>
-        		<th> Nachnahme </th>
-        		<th> Kundennummer </th>
-    		</tr>
-		</thead>
-		<tbody>
-    		<tr>
-        		<td> {{ form_row(form.salutation) }} </td>
-        		<td> {{ form_row(form.name) }} </td>
-        		<td> {{ form_row(form.prename) }} </td>
-        		<td> {{ form_row(form.customerNumber) }} </td>
-    		</tr>
-		</tbody>
-		<thead>
-			<tr>
-        		<th> Strasse </th>
-        		<th> Hausnummer </th>
-        		<th> Postleitzahl </th>
-        		<th> Stadt </th>
-        		<th> Land </th>
-    		</tr>
-    	</thead>
-    	<tbody>
-    		<tr>
-        		<td> {{ form_row(form.street) }} </td>
-        		<td> {{ form_row(form.number) }} </td>
-        		<td> {{ form_row(form.postalcode) }} </td>
-        		<td> {{ form_row(form.city) }} </td>
-        		<td> {{ form_row(form.country) }} </td>
-    		</tr>
-    	</tbody>
-    </table>
+    
+Customer:
+{{ form_start(form) }}
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+     
+    </div>
+    <div class="col-sm">
+     
+    	
+        		{{ form_row(form.salutation) }} 
+        		 {{ form_row(form.name) }} 
+        		 {{ form_row(form.prename) }} 
+        		 {{ form_row(form.customerNumber) }} 
+    
+    </div>
+    <div class="col-sm">
+      
+    </div>
+    <div class="col-sm">
+       {{ form_row(form.street) }}
+        		{{ form_row(form.number) }} 
+        		{{ form_row(form.postalcode) }}
+        		{{ form_row(form.city) }} 
+        	{{ form_row(form.country) }} 
+    	
+    </div>
+  </div>
+</div>
+    
+    
+		
+		
+    	
     {{ form_end(form) }}   
 </div>
             
