--- a/templates/customer/index.html.twig
+++ b/templates/customer/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block stylesheets %}
      {{ parent() }}
-     {{ encore_entry_link_tags('customerList') }}
+     {{ encore_entry_link_tags('customer') }}
 {% endblock %}
 
 {% block title %}Hello Customer!{% endblock %}
@@ -14,8 +14,8 @@
 
 {% endblock %}
 <div class="example-wrapper">
-    <h1>Hello Customer Form! ✅</h1>
-    Customer:
+    <h1>Customer List!</h1>
+    
    
 <table>
     <thead>
