--- a/assets/styles/customer.css
+++ b/assets/styles/customer.css
@@ -4,3 +4,7 @@ body {
 .example-wrapper {
 	margin: 1em auto; max-width: 1200px; width: 95%; font: 18px/1.5 sans-serif; 
 }
+
+.adress_inf{
+	color: red;
+}
