--- a/templates/customer/edit.html.twig
+++ b/templates/customer/edit.html.twig
@@ -1,56 +1,93 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Customer!{% endblock %}
+{% block title %}Edit Customer!{% endblock %}
 
 {% block body %}
 
+{% block stylesheets %}
+     {{ parent() }}
+     {{ encore_entry_link_tags('customer') }}
+{% endblock %}
+{% block javascripts %}
+     {{ parent() }}
+     {{ encore_entry_script_tags('customer') }}
+{% endblock %}
 {% block menu %}
 
 	{% include ('menu/menu.html.twig') %}
 
 {% endblock %}
-<div class="example-wrapper">
-    <h1>New Customer Form! ✅</h1>
-	
-    Customer:
-    {{ form_start(form) }}
-    <table>
-    	<thead>
-    		<tr>
-        		<th> Anrede </th>
-        		<th> Vorname </th>
-        		<th> Nachnahme </th>
-        		<th> Kundennummer </th>
-    		</tr>
-		</thead>
-		<tbody>
-    		<tr>
-        		<td> {{ form_row(form.salutation) }} </td>
-        		<td> {{ form_row(form.name) }} </td>
-        		<td> {{ form_row(form.prename) }} </td>
-        		<td> {{ form_row(form.customerNumber) }} </td>
-    		</tr>
-		</tbody>
-		<thead>
-			<tr>
-        		<th> Strasse </th>
-        		<th> Hausnummer </th>
-        		<th> Postleitzahl </th>
-        		<th> Stadt </th>
-        		<th> Land </th>
-    		</tr>
-    	</thead>
-    	<tbody>
-    		<tr>
-        		<td> {{ form_row(form.street) }} </td>
-        		<td> {{ form_row(form.number) }} </td>
-        		<td> {{ form_row(form.postalcode) }} </td>
-        		<td> {{ form_row(form.city) }} </td>
-        		<td> {{ form_row(form.country) }} </td>
-    		</tr>
-    	</tbody>
-    </table>
-    {{ form_end(form) }}   
+<div class="wrapper">
+    <h1>Überschrift</h1>
+    
+Edit Customer
+{{ form_start(form) }}
+
+<div class="container">
+<h3>persönliche Angaben</h3></br>
+  <div class="row">  
+ 	<div class="col-6 col-sm-2"><p class="pers_inf">Anrede</p></div>
+    <div class="col-6 col-sm-2">{{ form_row(form.salutation) }} </div>
+    <div class="w-100"></div>
+    <div class="col-6 col-sm-2"><p class="pers_inf">Mailadresse</p></div>
+    <div class="col-6 col-sm-2">{{ form_row(form.mail) }}  </div>
+    <div class="w-100"></div>
+    <div class="col-6 col-sm-2"><p class="pers_inf">Vorname</p></div>
+    <div class="col-6 col-sm-2">{{ form_row(form.name) }}  </div>
+    <div class="w-100"></div>
+    <div class="col-6 col-sm-2"><p class="pers_inf">Nachnahme</p></div>
+    <div class="col-6 col-sm-2">{{ form_row(form.prename) }}  </div>
+    <div class="w-100"></div>
+    <div class="col-6 col-sm-2"><p class="pers_inf">Kundennummer</p></div>
+    <div class="col-6 col-sm-2">{{ form_row(form.customerNumber) }}  </div>      
+  </div>
+  <p>wenn Rechnungsadresse gleich Lieferadresse ist:</p>
+  <button id="sam_addr_new_cust" type="button" class="btn btn-primary">Primary</button>
+</div>
+
+<div class="container">
+  <div class="row">
+  <h3>Rechnungsadresse</h3>
+  	<div class="col">
+  		<p  class="adress_inf">Strasse</br>
+  		Hausnummer</br>
+  		Postleitzahl</br>
+  		Stadt</br>
+  		Land</br></p>
+  		
+  	</div>
+    <div class="col">
+	 	{{ form_row(form.street) }}
+        {{ form_row(form.number) }} 
+        {{ form_row(form.postalcode) }}
+        {{ form_row(form.city) }} 
+        {{ form_row(form.country) }}    
+    </div>
+    <h3>Lieferadresse</h3>
+    <div class="col">
+    <p>Strasse</br>
+  		Hausnummer</br>
+  		Postleitzahl</br>
+  		Stadt</br>
+  		Land</br></p>
+  	</div>
+    <div class="col">
+        {{ form_row(form.streetInvoice) }}
+        {{ form_row(form.numberInvoice) }} 
+        {{ form_row(form.postlalcodeInvoice) }}
+        {{ form_row(form.cityInvoice) }} 
+        {{ form_row(form.countryInvoice) }} 
+           
+    </div>
+  </div>
+  {{ form_end(form) }}    
+</div>
+
+</div>    
+		
+		
+    	
+   
 </div>
             
 {% endblock %}
