--- a/templates/customer/new.html.twig
+++ b/templates/customer/new.html.twig
@@ -4,50 +4,90 @@
 
 {% block body %}
 
+{% block stylesheets %}
+     {{ parent() }}
+     {{ encore_entry_link_tags('customer') }}
+{% endblock %}
+{% block javascripts %}
+     {{ parent() }}
+     {{ encore_entry_script_tags('customer') }}
+{% endblock %}
 {% block menu %}
 
 	{% include ('menu/menu.html.twig') %}
 
 {% endblock %}
-<div class="example-wrapper">
-    <h1>Hello Customer Form! ✅</h1>
+<div class="wrapper">
+    <h1>Überschrift</h1>
     
-Customer:
+Anlegen neuer Customer:
 {{ form_start(form) }}
 
 <div class="container">
+<h3>persönliche Angaben</h3></br>
+  <div class="row">  
+ 	<div class="col-6 col-sm-2"><p class="pers_inf">Anrede</p></div>
+    <div class="col-6 col-sm-2">{{ form_row(form.salutation) }} </div>
+    <div class="w-100"></div>
+    <div class="col-6 col-sm-2"><p class="pers_inf">Mailadresse</p></div>
+    <div class="col-6 col-sm-2">{{ form_row(form.mail) }}  </div>
+    <div class="w-100"></div>
+    <div class="col-6 col-sm-2"><p class="pers_inf">Vorname</p></div>
+    <div class="col-6 col-sm-2">{{ form_row(form.name) }}  </div>
+    <div class="w-100"></div>
+    <div class="col-6 col-sm-2"><p class="pers_inf">Nachnahme</p></div>
+    <div class="col-6 col-sm-2">{{ form_row(form.prename) }}  </div>
+    <div class="w-100"></div>
+    <div class="col-6 col-sm-2"><p class="pers_inf">Kundennummer</p></div>
+    <div class="col-6 col-sm-2">{{ form_row(form.customerNumber) }}  </div>      
+  </div>
+  <p>wenn Rechnungsadresse gleich Lieferadresse ist:</p>
+  <button id="sam_addr_new_cust" type="button" class="btn btn-primary">Primary</button>
+</div>
+
+<div class="container">
   <div class="row">
-    <div class="col-sm">
-     
+  <h3>Rechnungsadresse</h3>
+  	<div class="col">
+  		<p  class="adress_inf">Strasse</br>
+  		Hausnummer</br>
+  		Postleitzahl</br>
+  		Stadt</br>
+  		Land</br></p>
+  		
+  	</div>
+    <div class="col">
+	 	{{ form_row(form.street) }}
+        {{ form_row(form.number) }} 
+        {{ form_row(form.postalcode) }}
+        {{ form_row(form.city) }} 
+        {{ form_row(form.country) }}    
     </div>
-    <div class="col-sm">
-     
-    	
-        		{{ form_row(form.salutation) }} 
-        		 {{ form_row(form.name) }} 
-        		 {{ form_row(form.prename) }} 
-        		 {{ form_row(form.customerNumber) }} 
-    
-    </div>
-    <div class="col-sm">
-      
-    </div>
-    <div class="col-sm">
-       {{ form_row(form.street) }}
-        		{{ form_row(form.number) }} 
-        		{{ form_row(form.postalcode) }}
-        		{{ form_row(form.city) }} 
-        	{{ form_row(form.country) }} 
-    	
+    <h3>Lieferadresse</h3>
+    <div class="col">
+    <p>Strasse</br>
+  		Hausnummer</br>
+  		Postleitzahl</br>
+  		Stadt</br>
+  		Land</br></p>
+  	</div>
+    <div class="col">
+        {{ form_row(form.streetInvoice) }}
+        {{ form_row(form.numberInvoice) }} 
+        {{ form_row(form.postlalcodeInvoice) }}
+        {{ form_row(form.cityInvoice) }} 
+        {{ form_row(form.countryInvoice) }} 
+           
     </div>
   </div>
+  {{ form_end(form) }}    
 </div>
-    
-    
+
+</div>    
 		
 		
     	
-    {{ form_end(form) }}   
+   
 </div>
             
 {% endblock %}
