--- a/templates/customer/edit.html.twig
+++ b/templates/customer/edit.html.twig
@@ -65,7 +65,7 @@ Edit Customer
     </div>
     <h3>Lieferadresse</h3>
     <div class="col">
-    <p>Strasse</br>
+    <p class="adress_inf">Strasse</br>
   		Hausnummer</br>
   		Postleitzahl</br>
   		Stadt</br>
