--- a/templates/customer/index.html.twig
+++ b/templates/customer/index.html.twig
@@ -15,8 +15,7 @@
 {% endblock %}
 <div class="example-wrapper">
     <h1>Customer List!</h1>
-    
-   
+    <button type="button" onclick="location.href='{{ path('new_customer') }}';" class="btn btn-primary">NEW</button>  
 <table>
     <thead>
     		<tr>
