--- a/templates/customer/index.html.twig
+++ b/templates/customer/index.html.twig
@@ -47,7 +47,7 @@
             		<i class="fa fa-trash"></i>
             		Customer bearbeiten
         		</a></td>	
-        		<td><a href="{{ path('edit_customer', { id : item.id }) }}" class="list-group-item small delete">
+        		<td><a href="{{ path('del_customer', { id : item.id }) }}" class="list-group-item small delete">
             		<i class="fa fa-trash"></i>
             		Customer loeschen
         		</a></td>	
