--- a/templates/customer/edit.html.twig
+++ b/templates/customer/edit.html.twig
@@ -47,7 +47,7 @@ Edit Customer
   <button id="sam_addr_new_cust" type="button" class="btn btn-primary">Primary</button>
 </div>
 
-<div class="container">
+<div class="container customer1">
   <div class="row">
   <h3>Rechnungsadresse</h3>
   	<div class="col">
@@ -85,11 +85,18 @@ Edit Customer
   {{ form_end(form) }}    
 </div>
 
-</div>    
-		
-		
-    	
-   
+<div class="container text-center customer1">
+  <div class="row">
+    <div class="col overview_customer">
+      Offer
+    </div>
+    <div class="col overview_customer">
+      Order
+    </div>
+    <div class="col overview_customer">
+      Invoice
+    </div>
+  </div>
 </div>
             
 {% endblock %}
