--- a/templates/offer/index.html.twig
+++ b/templates/offer/index.html.twig
@@ -26,7 +26,7 @@
 </style>
 
 <div class="wrapper">
-<h1>Product List!</h1>
+<h1>Offer List!</h1>
 <button type="button" onclick="location.href='{{ path('app_offer_newOffer') }}';" class="btn btn-primary">NEW</button>
     <table>
     <thead>
