--- a/templates/offer/newOffer.html.twig
+++ b/templates/offer/newOffer.html.twig
@@ -21,11 +21,6 @@
 
 {% endblock %}
 
-
-
-
-
-
 <!-- Modal -->
 <div class="modal fade bd-example-modal-xl" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
   <div class="modal-dialog modal-xl" role="document">
@@ -37,9 +32,22 @@
         </button>
       </div>
       <div class="modal-body">
-      <table>
+      <table style="width:100%">
+      <thead>
+    		<tr>
+        		<th> Anrede </th>
+        		<th> Vorname </th>
+        		<th> Nachnahme </th>
+        		<th> Kundennummer </th>
+        		<th> Strasse </th>
+        		<th> Hausnummer </th>
+        		<th> Postleitzahl </th>
+        		<th> Stadt </th>
+        		<th> Land </th>
+    		</tr>
+    </thead>
          {% for item in customer_data %}
-        	<tr id="{{ item.id }}">
+        	<tr id="{{ item.id }}" class="customer_offer">
             	<td>{{ item.salutation }}</td>
             	<td>{{ item.name }}</td>
             	<td>{{ item.prename }}</td>
@@ -60,11 +68,6 @@
     </div>
   </div>
 </div>
-
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
 <div class="wrapper">
 
@@ -91,8 +94,6 @@
             <div class="col-6 col-sm-2"><p class="pers_inf">Kundennummer</p></div>
             <div class="col-6 col-sm-2">{{ form_row(form.Customer.customerNumber) }}  </div>      
           </div>
-          <p>wenn Rechnungsadresse gleich Lieferadresse ist:</p>
-          <button id="sam_addr_new_cust" type="button" class="btn btn-primary">Primary</button>
     </div>
     <div class="container offer_middle_container">
       <div class="row">
