--- a/templates/offer/newOffer.html.twig
+++ b/templates/offer/newOffer.html.twig
@@ -32,7 +32,8 @@
         </button>
       </div>
       <div class="modal-body">
-      <table style="width:100%">
+      <div >
+      <table style="width:100%" >
       <thead>
     		<tr>
         		<th> Anrede </th>
@@ -46,7 +47,9 @@
         		<th> Land </th>
     		</tr>
     </thead>
+    
          {% for item in customer_data %}
+         
         	<tr id="{{ item.id }}" class="customer_offer">
             	<td>{{ item.salutation }}</td>
             	<td>{{ item.name }}</td>
@@ -57,13 +60,16 @@
             	<td>{{ item.postalCode }}</td>
             	<td>{{ item.city }}</td>
             	<td>{{ item.country }}</td>
+            	<td><button type="button" id="{{ item.id }}" class="btn btn-secondary" data-dismiss="modal">take</button></td>
             </tr>
+        
         {% endfor %}
+    
 	</table>
+	</div><span data-offer-target="output">
 	</div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
@@ -72,7 +78,7 @@
 <div class="wrapper">
 
         {{ form_start(form) }}
-    <div class="container">
+    <div class="container" >
     	<!-- Button trigger modal -->
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
           Bestandskunde
@@ -86,10 +92,10 @@
             <div class="col-6 col-sm-2">{{ form_row(form.Customer.name) }}  </div>
             <div class="w-100"></div>
             <div class="col-6 col-sm-2"><p class="pers_inf">Nachnahme</p></div>
-            <div class="col-6 col-sm-2">{{ form_row(form.Customer.mail) }}  </div>
-            <div class="w-100"></div>
-            <div class="col-6 col-sm-2"><p class="pers_inf">Mailadresse</p></div>
             <div class="col-6 col-sm-2">{{ form_row(form.Customer.prename) }}  </div>
+            <div class="w-100"></div>
+            <div class="col-6 col-sm-2"><p class="pers_inf">Mailadresse</p></div>            
+            <div class="col-6 col-sm-2">{{ form_row(form.Customer.mail) }}  </div>
             <div class="w-100"></div>
             <div class="col-6 col-sm-2"><p class="pers_inf">Kundennummer</p></div>
             <div class="col-6 col-sm-2">{{ form_row(form.Customer.customerNumber) }}  </div>      
@@ -122,7 +128,7 @@
         </div>
       </div>
     </div>    
-	<div class="container offer_list_container">
+	<div class="container offer_list_container" data-controller="offer">
       <div class="row">
       <h3>Rechnungsadresse</h3>
       	<div class="col">
@@ -159,5 +165,24 @@
       </div>  
 </div>
     {{ form_end(form) }}     
+</div>
+<div data-controller="hello">
+  <input data-hello-target="name" type="text">
+  <button data-action="click->hello#greet">Greet</button>
+</div>
+<div data-controller="clipboard">
+  PIN: <input data-clipboard-target="source" type="text" value="1234" readonly>
+  <button data-action="clipboard#copy">Copy to Clipboard</button>
+</div>
+<div data-controller="clipboard">
+  PIN: <input data-clipboard-target="source" type="text" value="3737" readonly>
+  <button data-action="clipboard#copy">Copy to Clipboard</button>
+</div>
+<div data-controller="clipboard">
+  PIN: <input data-clipboard-target="source" type="text" value="2908" readonly>
+  <a href="#" data-action="clipboard#copy">Copy to Clipboard</a>
+</div>
+<div data-controller="offer">
+<span data-target="output"></span>
 </div>
 {% endblock %}
