--- a/assets/styles/offer.css
+++ b/assets/styles/offer.css
@@ -1,3 +1,10 @@
+.wrapper { 
+	margin: 1em auto; 
+	max-width: 1800px; 
+	width: 95%; 
+	font: 12px/1.5 sans-serif; 
+	overflow: hidden;
+}
 .offer_middle_container{
 	max-width: 1800px;
 }
@@ -39,4 +46,12 @@
 .adress_inf{
  	line-height: 1.9;
  	text-align: right;
+}
+.productList{
+	max-width: 1800px;
+}
+
+.product-box div{
+	float: left;
+	margin: 2px;
 }
