--- a/templates/offer/newOffer.html.twig
+++ b/templates/offer/newOffer.html.twig
@@ -1,188 +1,264 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello SalesManagementController!{% endblock %}
+{% block title %}
+Hello SalesManagementController!
+{% endblock %}
 
 {% block body %}
 
 {% block stylesheets %}
-     {{ parent() }}
-     {{ encore_entry_link_tags('offer') }}
+{{ parent() }}
+{{ encore_entry_link_tags('offer') }}
 {% endblock %}
 
 {% block javascripts %}
-     {{ parent() }}
-     {{ encore_entry_script_tags('offer') }}
+{{ parent() }}
+{{ encore_entry_script_tags('offer') }}
 {% endblock %}
 
 
 {% block menu %}
 
-	{% include ('menu/menu.html.twig') %}
+{% include ('menu/menu.html.twig') %}
 
 {% endblock %}
 
 <!-- Modal -->
-<div class="modal fade bd-example-modal-xl" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-  <div class="modal-dialog modal-xl" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Bestandskunden</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-      <div >
-      <table style="width:100%" >
-      <thead>
-    		<tr>
-        		<th> Anrede </th>
-        		<th> Vorname </th>
-        		<th> Nachnahme </th>
-        		<th> Kundennummer </th>
-        		<th> Strasse </th>
-        		<th> Hausnummer </th>
-        		<th> Postleitzahl </th>
-        		<th> Stadt </th>
-        		<th> Land </th>
-    		</tr>
-    </thead>
-    
-         {% for item in customer_data %}
-         
-        	<tr id="{{ item.id }}" class="customer_offer">
-            	<td>{{ item.salutation }}</td>
-            	<td>{{ item.name }}</td>
-            	<td>{{ item.prename }}</td>
-            	<td>{{ item.customerNumber }}</td>
-            	<td>{{ item.street }}</td>
-            	<td>{{ item.number }}</td>
-            	<td>{{ item.postalCode }}</td>
-            	<td>{{ item.city }}</td>
-            	<td>{{ item.country }}</td>
-            	<td><button type="button" id="{{ item.id }}" class="btn btn-secondary" data-dismiss="modal">take</button></td>
-            </tr>
-        
-        {% endfor %}
-    
-	</table>
-	</div><span data-offer-target="output">
+<div class="modal fade bd-example-modal-xl" id="exampleModal"
+	tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
+	aria-hidden="true">
+	<div class="modal-dialog modal-xl" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="exampleModalLongTitle">Bestandskunden</h5>
+				<button type="button" class="close" data-dismiss="modal"
+					aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body">
+				<div>
+					<table style="width: 100%">
+						<thead>
+							<tr>
+								<th>Anrede</th>
+								<th>Vorname</th>
+								<th>Nachnahme</th>
+								<th>Kundennummer</th>
+								<th>Strasse</th>
+								<th>Hausnummer</th>
+								<th>Postleitzahl</th>
+								<th>Stadt</th>
+								<th>Land</th>
+							</tr>
+						</thead>
+
+						{% for item in customer_data %}
+
+						<tr id="{{ item.id }}" class="customer_offer">
+							<td>{{ item.salutation }}</td>
+							<td>{{ item.name }}</td>
+							<td>{{ item.prename }}</td>
+							<td>{{ item.customerNumber }}</td>
+							<td>{{ item.street }}</td>
+							<td>{{ item.number }}</td>
+							<td>{{ item.postalCode }}</td>
+							<td>{{ item.city }}</td>
+							<td>{{ item.country }}</td>
+							<td><button type="button" id="{{ item.id }}"
+									class="btn btn-secondary" data-dismiss="modal">take</button></td>
+						</tr>
+
+						{% endfor %}
+
+					</table>
+				</div>
+				<span data-offer-target="output">
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+			</div>
+		</div>
 	</div>
-    <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
 </div>
 
 <div class="wrapper">
 
-        {{ form_start(form) }}
-    <div class="container" >
-    	<!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-          Bestandskunde
-        </button>
-        <h3>persönliche Angaben</h3></br>
-          <div class="row">  
-         	<div class="col-6 col-sm-2"><p class="pers_inf">Anrede</p></div>
-            <div class="col-6 col-sm-2">{{ form_row(form.Customer.salutation) }} </div>
-            <div class="w-100"></div>
-            <div class="col-6 col-sm-2"><p class="pers_inf">Vorname</p></div>
-            <div class="col-6 col-sm-2">{{ form_row(form.Customer.name) }}  </div>
-            <div class="w-100"></div>
-            <div class="col-6 col-sm-2"><p class="pers_inf">Nachnahme</p></div>
-            <div class="col-6 col-sm-2">{{ form_row(form.Customer.prename) }}  </div>
-            <div class="w-100"></div>
-            <div class="col-6 col-sm-2"><p class="pers_inf">Mailadresse</p></div>            
-            <div class="col-6 col-sm-2">{{ form_row(form.Customer.mail) }}  </div>
-            <div class="w-100"></div>
-            <div class="col-6 col-sm-2"><p class="pers_inf">Kundennummer</p></div>
-            <div class="col-6 col-sm-2">{{ form_row(form.Customer.customerNumber) }}  </div>      
-          </div>
-    </div>
-    <div class="container offer_middle_container">
-      <div class="row">
-        <div class="col">
-        <p>Erstellungsdatum</p>
-          {{ form_row(form.creation_date) }}
-        </div>
-        <div class="col-6">
-          <p>Order Liste</p>
-          {{ form_row(form.order_list_number) }}
-        </div>
-        <div class="col">
-          
-          {{ form_row(form.expiry_date) }}
-        </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          1 of 3
-        </div>
-        <div class="col-5">
-          2 of 3 (wider)
-        </div>
-        <div class="col">
-          3 of 3
-        </div>
-      </div>
-    </div>    
+	{{ form_start(form) }}
+	<div class="container">
+		<!-- Button trigger modal -->
+		<button type="button" class="btn btn-primary" data-toggle="modal"
+			data-target="#exampleModal">Bestandskunde</button>
+		<h3>persönliche Angaben</h3>
+		</br>
+		<div class="row">
+			<div class="col-6 col-sm-2">
+				<p class="pers_inf">Anrede</p>
+			</div>
+			<div class="col-6 col-sm-2">
+				{{ form_row(form.Customer.salutation) }}
+			</div>
+			<div class="w-100"></div>
+			<div class="col-6 col-sm-2">
+				<p class="pers_inf">Vorname</p>
+			</div>
+			<div class="col-6 col-sm-2">
+				{{ form_row(form.Customer.name) }}
+			</div>
+			<div class="w-100"></div>
+			<div class="col-6 col-sm-2">
+				<p class="pers_inf">Nachnahme</p>
+			</div>
+			<div class="col-6 col-sm-2">
+				{{ form_row(form.Customer.prename) }}
+			</div>
+			<div class="w-100"></div>
+			<div class="col-6 col-sm-2">
+				<p class="pers_inf">Mailadresse</p>
+			</div>
+			<div class="col-6 col-sm-2">
+				{{ form_row(form.Customer.mail) }}
+			</div>
+			<div class="w-100"></div>
+			<div class="col-6 col-sm-2">
+				<p class="pers_inf">Kundennummer</p>
+			</div>
+			<div class="col-6 col-sm-2">
+				{{ form_row(form.Customer.customerNumber) }}
+			</div>
+		</div>
+	</div>
+	<div class="container offer_middle_container">
+		<div class="row">
+			<div class="col">
+				<p>Erstellungsdatum</p>
+				{{ form_row(form.creation_date) }}
+			</div>
+			<div class="col-6">
+				<p>Order Liste</p>
+				{{ form_row(form.order_list_number) }}
+			</div>
+			<div class="col">
+
+				{{ form_row(form.expiry_date) }}
+			</div>
+		</div>
+		<div class="row">
+			<div class="col">1 of 3</div>
+			<div class="col-5">2 of 3 (wider)</div>
+			<div class="col">3 of 3</div>
+		</div>
+	</div>
 	<div class="container offer_list_container" data-controller="offer">
-      <div class="row">
-      <h3>Rechnungsadresse</h3>
-      	<div class="col">
-      		<p  class="adress_inf">Strasse</br>
-      		Hausnummer</br>
-      		Postleitzahl</br>
-      		Stadt</br>
-      		Land</br></p>
-      		
-      	</div>
-        <div class="col">
-    	 	{{ form_row(form.Customer.street) }}
-            {{ form_row(form.Customer.number) }} 
-            {{ form_row(form.Customer.postalcode) }}
-            {{ form_row(form.Customer.city) }} 
-            {{ form_row(form.Customer.country) }}    
-        </div>
-        <h3>Lieferadresse</h3>
-        <div class="col">
-        <p class="adress_inf">Strasse</br>
-      		Hausnummer</br>
-      		Postleitzahl</br>
-      		Stadt</br>
-      		Land</br></p>
-      	</div>
-        <div class="col">
-            {{ form_row(form.Customer.streetInvoice) }}
-            {{ form_row(form.Customer.numberInvoice) }} 
-            {{ form_row(form.Customer.postlalcodeInvoice) }}
-            {{ form_row(form.Customer.cityInvoice) }} 
-            {{ form_row(form.Customer.countryInvoice) }} 
-               
-        </div>
-      </div>  
+		<div class="row">
+			<h3>Rechnungsadresse</h3>
+			<div class="col">
+				<p class="adress_inf">
+					Strasse</br> Hausnummer</br> Postleitzahl</br> Stadt</br> Land</br>
+				</p>
+
+			</div>
+			<div class="col">
+				{{ form_row(form.Customer.street) }}
+				{{ form_row(form.Customer.number) }}
+				{{ form_row(form.Customer.postalcode) }}
+				{{ form_row(form.Customer.city) }}
+				{{ form_row(form.Customer.country) }}
+			</div>
+			<h3>Lieferadresse</h3>
+			<div class="col">
+				<p class="adress_inf">
+					Strasse</br> Hausnummer</br> Postleitzahl</br> Stadt</br> Land</br>
+				</p>
+			</div>
+			<div class="col">
+				{{ form_row(form.Customer.streetInvoice) }}
+				{{ form_row(form.Customer.numberInvoice) }}
+				{{ form_row(form.Customer.postlalcodeInvoice) }}
+				{{ form_row(form.Customer.cityInvoice) }}
+				{{ form_row(form.Customer.countryInvoice) }}
+
+			</div>
+		</div>
+	</div>
+	{% macro niceForm(form) %}
+	<div class="container offer_list_container">
+		<div class="row">
+			<div class="col">
+				{{ form_row(form.productName) }}
+			</div>
+			<div class="col">
+				{{ form_row(form.productType) }}
+			</div>
+			<div class="col">
+				{{ form_row(form.description) }}
+			</div>
+			<div class="col">
+				{{ form_row(form.taxRate) }}
+			</div>
+			<div class="col">
+				{{ form_row(form.serialNumber) }}
+			</div>
+			<div class="col">
+				{{ form_row(form.intNumber) }}
+			</div>
+			<div class="col">
+				{{ form_row(form.storagePlace) }}
+			</div>
+			<div class="col">
+				{{ form_row(form.quantity) }}
+			</div>
+			<div class="col">
+				{{ form_row(form.price) }}
+			</div>
+		</div>
+	</div>
+	<div style="visibility: hidden;"></div>
+	{{ form_widget(form) }}
+	{% endmacro niceForm %}
+	{% import _self as formMacro %}
+	{{ form_label(form.positions) }}
+	{{ form_errors(form.positions) }}
+
+	<ul id="positions-fields-list"
+		data-prototype="{{ formMacro.niceForm(form.positions.vars.prototype)|e }}"
+		data-widget-tags="{{ '<li></li>'|e }}"
+		data-widget-counter="{{ form.positions|length }}">
+
+		{% for positionsField in form.positions %}
+		<li>{{ form_errors(positionsField) }} {{ form_widget(positionsField.productName) }}
+		</li>
+		{% endfor %}
+	</ul>
+
+	<button type="button" class="add-another-collection-widget"
+		data-list-selector="#positions-fields-list">Add another
+		Position</button>
+
+	<div class="container productList">
+		<div class="row">
+			<div class="col-sm-8"></div>
+			<div class="col-sm-4">
+				<table>
+					<thead>
+						<tr>
+							<th>Taxrate</th>
+							<th>Last Price</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>{{ form_row(form.tax_rate) }}</td>
+							<td>{{ form_row(form.price) }}</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+
+	{{ form_end(form) }}
+
 </div>
-    {{ form_end(form) }}     
-</div>
-<div data-controller="hello">
-  <input data-hello-target="name" type="text">
-  <button data-action="click->hello#greet">Greet</button>
-</div>
-<div data-controller="clipboard">
-  PIN: <input data-clipboard-target="source" type="text" value="1234" readonly>
-  <button data-action="clipboard#copy">Copy to Clipboard</button>
-</div>
-<div data-controller="clipboard">
-  PIN: <input data-clipboard-target="source" type="text" value="3737" readonly>
-  <button data-action="clipboard#copy">Copy to Clipboard</button>
-</div>
-<div data-controller="clipboard">
-  PIN: <input data-clipboard-target="source" type="text" value="2908" readonly>
-  <a href="#" data-action="clipboard#copy">Copy to Clipboard</a>
-</div>
-<div data-controller="offer">
-<span data-target="output"></span>
-</div>
+
 {% endblock %}
