--- a/templates/offer/newOffer.html.twig
+++ b/templates/offer/newOffer.html.twig
@@ -111,7 +111,7 @@ Hello SalesManagementController!
 
 						{% for item in product_data %}
 
-						<tr id="{{ item.id }}" class="customer_offer">
+						<tr id="{{ item.id }}" class="product_offer">
 							<td>
 								{{ item.productName }}
 							</td>
